# finploy-sitemap-generator

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  SCRIPTS.md  SUMMARY.md  TECHNICAL_REPORT.md  cron_template.txt  finploy-sitemap.service  pyproject.toml  quick_start.sh  report.md  requirements.txt  run_optimized_final.py  run_sitemap_generator.sh
data/: .gitkeep
data/sitemap/: robots.txt  sitemap.xml
logs/: .gitkeep
src/sitemap_generator/: __init__.py  config.py  crawler.py  dynamic_handler.py  main.py  optimized_crawler.py  sitemap_writer.py  static_crawler.py  types.py  url_discovery.py  url_manager.py  utils.py
tests/: __init__.py  test_crawler.py  test_sitemap_writer.py  test_url_manager.py
